# android

CharacterListApp/: settings.gradle.kts
CharacterListApp/app/: build.gradle.kts
CharacterListApp/app/src/main/: AndroidManifest.xml
CharacterListApp/gradle/wrapper/: gradle-wrapper.properties
PlayerFinder/: build.gradle.kts  settings.gradle.kts
PlayerFinder/app/: build.gradle.kts  google-services.json
PlayerFinder/app/src/main/: AndroidManifest.xml
PlayerFinder/gradle/: libs.versions.toml
PlayerFinder/gradle/wrapper/: gradle-wrapper.properties
RecipeApp/app/src/main/: AndroidManifest.xml
RecipeApp/gradle/wrapper/: gradle-wrapper.properties
RecipeManager/: settings.gradle.kts
RecipeManager/app/: build.gradle.kts
RecipeManager/app/src/main/: AndroidManifest.xml
RecipeManager/gradle/wrapper/: gradle-wrapper.properties
ShoppingManagementApp/: local.properties  settings.gradle.kts
ShoppingManagementApp/app/: build.gradle.kts
ShoppingManagementApp/gradle/wrapper/: gradle-wrapper.properties
Snake/app/: build.gradle.kts
Snake/app/src/main/: AndroidManifest.xml
Snake/app/src/main/cpp/: CMakeLists.txt  main.cpp
Snake/app/src/main/cpp/core/: Board.cpp  Board.h  Food.cpp  Food.h  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.h
Snake/app/src/main/cpp/input/: InputManager.cpp  InputManager.h
Snake/app/src/main/cpp/renderer/: SnakeRenderer.cpp  SnakeRenderer.h
Snake/gradle/: libs.versions.toml
Snake/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  (+2 more)
(+52 files in other folders)
